<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MRAssassin</string>
    <string name="playerName">Player Name</string>
    <string name="target_title">Target Dossier:</string><string name="target_name">Target Name</string><string name="target_kills">Target Kills</string><string name="target_bounty">Target Bounty</string><string name="target_money">Target Money</string>
    
    <string name="status_text_1">GPS Status</string>
    <string name="radar_title">Current Status:</string>
    <string name="radarDisc">Radar Background</string>
    <string name="testing">Attempt Attack</string>
    <string name="title_credits">Credits</string>
    <string name="title_login">MRAssassins Login</string>
    <string name="player_divider">Player Info:</string><string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="server_divider">Server Info:</string><string name="server_text">Server Web Address:</string>
    
    <string name="login_button_text">Log In!</string>
    <string name="stat_category">Stat Category</string>
    <string name="left_arrow_content">Left Arrow</string>
    <string name="right_arrow_content">Right Arrow</string>
    <string name="stats_waiting">Populating Statistics. . . . .</string>
    <string name="list_default_title">Assassin Name</string>
    <string name="list_default_summary">Assassin Info</string>
    <string name="help_heading_1">Overview</string>
    <string name="help_desc_1">Brief Summary</string>
    <string name="help_heading_2">Radar</string>
    <string name="help_desc_2">Radar Summary</string>
    <string name="help_heading_3">Target</string>
    <string name="help_desc_3">Target Overview</string>
    <string name="help_heading_4">Stats</string>
    <string name="help_desc_4">Stat Overview</string>
    <string name="back_text">Back to previous tab</string>
    
    
    
    

</resources>