<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/player_info_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_divider"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/username_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_text"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/server_info_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_divider"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/server_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/server_text"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text" />

</LinearLayout>