<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
	<ScrollView 
	    android:id="@+id/help_scroll"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="50dip" >
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/title_overview"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/help_heading_1"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <TextView
	            android:id="@+id/overview_summary"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/help_desc_1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/radar_overview"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/help_heading_2"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <TextView
	            android:id="@+id/radar_summary"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/help_desc_2"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/target_overview"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/help_heading_3"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <TextView
	            android:id="@+id/target_summary"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/help_desc_3"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/stats_overview"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/help_heading_4"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <TextView
	            android:id="@+id/stat_summary"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/help_desc_4"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </LinearLayout>
	
	</ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:gravity="bottom"
	    android:layout_marginTop="-50dip" >
	    
	    <Button
	        android:id="@+id/help_back"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/back_text" 
	        android:onClick="exit"  />
    
    </RelativeLayout>
    
</LinearLayout>